# yoclaw

./: .gitignore  CLAUDE.md  Cargo.toml  MANUAL_TEST_CHECKLIST.md  README.md  book.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: SUMMARY.md  introduction.md
docs/concepts/: architecture.md  channels.md  memory.md  scheduler.md  security.md  skills.md  web-ui.md  workers.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: discord-bot.md  slack-bot.md  telegram-bot.md  use-cases.md
docs/reference/: cli.md  configuration.md  hot-reload.md  session-ids.md
docs/theme/: custom.css
migrations/: 001_initial.sql  002_vector_memory.sql  003_scheduler.sql  004_saved_workers.sql
src/: config.rs  lib.rs  main.rs  migrate.rs  watcher.rs
src/channels/: coalesce.rs  discord.rs  mod.rs  slack.rs  telegram.rs
src/conductor/: compaction.rs  delegate.rs  mod.rs  tools.rs
src/db/: audit.rs  memory.rs  mod.rs  queue.rs  tape.rs  vector.rs
src/scheduler/: cortex.rs  cron.rs  mod.rs  tools.rs
src/security/: budget.rs  heuristics.rs  injection.rs  llm_judge.rs  mod.rs
src/skills/: manifest.rs  mod.rs
src/web/: api.rs  mod.rs  sse.rs
