[package]
name = "yoclaw"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Secure, single-binary AI agent orchestrator"

[dependencies]
# Core agent library
yoagent = { path = "../yoagent-repo" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Telegram
teloxide = { version = "0.13", features = ["macros"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Regex for config env var expansion
regex = "1"

# Async trait
async-trait = "0.1"

# Home directory
dirs = "6"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
