[package]
name = "yoclaw"
version = "1.1.0"
edition = "2021"
rust-version = "1.75"
description = "Secure, single-binary AI agent orchestrator"

[features]
default = []
semantic = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers"]

[dependencies]
# Core agent library
yoagent = "0.5.1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }

# Telegram
teloxide = { version = "0.13", features = ["macros"] }

# Discord
serenity = { version = "0.12", features = ["client", "gateway", "model"] }

# Slack
slack-morphism = "0.41"
slack-morphism-hyper = "0.41"
http = "0.2"

# Web UI
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8"
mime_guess = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tower = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Regex for config env var expansion
regex = "1"

# Async trait
async-trait = "0.1"

# Home directory
dirs = "6"

# Cron expression parsing
cron = "0.13"

# Semantic memory (optional)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
hf-hub = { version = "0.4", optional = true }
tokenizers = { version = "0.21", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
